--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,11 @@
 }
 .createPostbtn:hover{
     background-color: black;
-    border-radius: 10px;
     color: white;
+}
+textarea{
+    padding: 10px;
+    font-size: 18px;
+    border: none;
+    outline: none;
 }
